--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <p>
           <button id="reset">Reset</button>
           <button id="runStep">Run Step</button>
+          <button id="run">Run</button>
         </p>
     </body>
     <script src="http://code.jquery.com/jquery-latest.js" type="text/javascript"></script>
